# prophet

./: .gitignore  .gitreview  AUTHORS  ChangeLog  Dockerfile  Dockerfile.deploy  README.md  README.zh-CN.md  README_EN.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: docker-image.yml
docs/: README_EN.md
etc/pip/: pip.conf
etc/prophet/: prophet.conf
etc/repo/: ali.repo  hypermotion.repo
examples/: scan_results.csv
examples/hosts_collection_sample/LINUX/: LINUX_192.168.10.201.yaml  LINUX_192.168.10.203.yaml
examples/hosts_collection_sample/VMWARE/: k8s_master_10.18_vmware.yaml
examples/hosts_collection_sample/WINDOWS/: WINDOWS_192.168.10.62.yaml
prophet/: __init__.py  ansible_api.py  exception.py  exceptions.py  http_status_codes.py  utils.py
prophet/api/: __init__.py
prophet/cloud/: http_request.py  http_status_codes.py  openstack_client.py
prophet/cmd/: analysis.py  cli.py  collect.py  collector.py  test_openstack_api.py
prophet/cmd/api_test/: test_openstack_api.py
prophet/cmd/api_test/cloud/: base.py  errors.py  openstack.py
prophet/collector/: base.py  collector.py
prophet/collector/hosts/: linux.py  vmware.py  windows.py
prophet/controller/: batch_job.py  config.yaml  config_file.py  gen_mac.py  linux_host.py  network.py  test_vmware.py  vmware.py  windows_host.py
prophet/controller/analysis/: host_base.py  linux_host.py  report.py  report_job.py  vmware_host.py  windows_host.py
prophet/controller/lib/: ansible_api.py
prophet/parser/hosts/: base.py  linux.py  vmware.py  windows.py
prophet/report/: host_report.py
prophet/scanner/: network.py
tools/: build_env.config  compiler  dockerfile.template  entrypoints.sh  prophet.sh
