[metadata]
name = prophet
summary = Provide host information collection
author = Ray <sunqi@prophetech.cn>
classifier =
    Environment :: Console
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook


[files]
packages =
    prophet

[entry_points]

console_scripts =
    prophet-collector = prophet.cmd.collector:main
    prophet-cli = prophet.cmd.cli:main
