[metadata]
name = prophet
summary = Tool for collection and analysis in many senarios like cloud migration and cloud DR accessing period
author = Ray Sun<ray.sun@oneprocloud.com>
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Mulan Public License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    prophet

[entry_points]
console_scripts =
    prophet-cli = prophet.cmd.cli:main

host_collector =
    LINUX = prophet.collector.hosts.linux:LinuxCollector
    WINDOWS = prophet.collector.hosts.windows:WindowsCollector
    VMWARE = prophet.collector.hosts.vmware:VMwareCollector

host_parser =
    LINUX = prophet.parser.hosts.linux:LinuxParser
    WINDOWS = prophet.parser.hosts.windows:WindowsParser
    VMWARE = prophet.parser.hosts.vmware:VMwareParser
